# sakura

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt
src/app/: .clang-tidy  CMakeLists.txt
src/app/src/: .clang-tidy  ArgumentParser.cpp  ArgumentParser.hpp  Configuration.cpp  Configuration.hpp  main.cpp
src/common/: .clang-tidy  CMakeLists.txt
src/common/include/common/: Bits.hpp  Configuration.hpp  Formatter.hpp  Range.hpp
src/common/src/: .clang-tidy  Bits.cpp  Configuration.cpp  Formatter.cpp  Formatter_Private.hpp
src/common/tests/: CMakeLists.txt  CommonTests.cpp
src/grafx/: CMakeLists.txt
src/grafx/include/grafx/: Texture.hpp
src/grafx/src/: Texture.cpp
src/sakura/: .clang-tidy  CMakeLists.txt
src/sakura/include/sakura/: Constants.hpp  Emulator.hpp  Memory.hpp  Processor.hpp  RendererInfo.hpp
src/sakura/src/: .clang-tidy  Disassembler.cpp  Disassembler.hpp  Disassembler.tcc  Disassembler_Impl.hpp  Emulator.cpp  IO.cpp  IO.hpp  Instructions.hpp  Instructions_Impl.hpp  Interrupt.cpp  Interrupt.hpp  Memory.cpp  Memory.hpp  Processor.cpp  Processor.hpp  Processor.tcc  ProgrammableSoundGenerator.cpp  ProgrammableSoundGenerator.hpp  RendererInfo.cpp  Timer.cpp  Timer.hpp  VideoColorEncoder.cpp  VideoColorEncoder.hpp  VideoDisplayController.cpp  VideoDisplayController.hpp
